# Contract-Analyzer

./: .env.example  .gitignore  README.md  Readmee.md  lambda_function.py  llm.py  pyproject.toml
.github/workflows/: deploy.yml
data_processing/: truncator.py
src/data_processing/: llm.py  truncator.py
src/database_communications/: dynamoDb.py  s3.py
src/file_processing/: extract_file_details.py
src/prompt/: prompt.py
src/static_website/: ca.py
src/static_website/css/: styles.css
src/static_website/html/: index.html
src/static_website/js/: scripts.js
src/static_website/templates/: index.html
src/text_extractor/: extract_text.py
text_extractor/: extract_text.py
text_extractor/contract_analyser/: analyse_contract.py  ca.py  clauses.py  pdf_extracter.py  process_extracted_tenancy.py
text_extractor/static_website/: ca.py
text_extractor/static_website/templates/: upload.html
